hdone/objects/User.object
<CustomObject>
    <fields>
        <fullName>Flow_Entry__c</fullName>
        <description>Used to set entry for Process Builder and Flows</description>
        <inlineHelpText>Used to set entry for Process Builder and Flows</inlineHelpText>
        <label>Flow Entry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>FieldAnalystUpdateQueue</fullName>
                </value>
                <value>
                    <fullName>ManualToQueue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InitialProductAssigned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Login Flow to check if initial product, Permission Set, has been assigned.</description>
        <inlineHelpText>Used for Login Flow to check if initial product, Permission Set, has been assigned.</inlineHelpText>
        <label>InitialProductAssigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Level__c</fullName>
        <description>For Field Analysts. Level of base payment received</description>
        <inlineHelpText>Level of base payment received</inlineHelpText>
        <label>Payment Level</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Process_Builder_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Workaround now to indicate Process Builder ran. Avoids recursive updates.</description>
        <inlineHelpText>Workaround now to indicate Process Builder ran. Avoids recursive updates.</inlineHelpText>
        <label>Process Builder Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoleName__c</fullName>
        <description>DeveloperName for UserRole. Used for Skuid Page Assignments</description>
        <formula>UserRole.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>DeveloperName for UserRole.</inlineHelpText>
        <label>RoleName</label>
        <type>Text</type>
    </fields>
</CustomObject>